--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@opennextjs/cloudflare": "^1.14.4",
-    "next": "15.5.7",
-    "react": "19.1.2",
-    "react-dom": "19.1.2"
+    "@opennextjs/cloudflare": "^1.14.5",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
-    "@tailwindcss/postcss": "^4.1.17",
-    "@types/node": "^20.19.26",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^24.10.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vitest": "^4.0.15",
-    "wrangler": "^4.53.0"
+    "wrangler": "^4.54.0"
   }
 }
